# maatkatiimi

./: .cursorrules  .env  .env.agent_leader  .env.backup  .env.backup.1759295301  .env.demo  .env.example  .env2.example  .gitignore  AGENT_LEADER_DEPLOYMENT_GUIDE.md  AGENT_LEADER_README.md  ALOITA_TASTA.md  AUTOMATIC_BOT_GUIDE.md  BIRDEYE_KEY_MANAGER_README.md  BIRDEYE_QUICK_GUIDE.md  BIRDEYE_SCANNER_INTEGRATION_GUIDE.md  CODE_ANALYZER_README.md  CRYPTO_SCREENER_README.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DIGITALOCEAN_OHJEET.md  DIGITALOCEAN_SOLANA_SETUP.md  Dockerfile  Dockerfile.agent_leader  Dockerfile.birdeye  ENHANCED_BOT_DOCUMENTATION.md  GITHUB_ACTIONS_OHJEET.md  GITHUB_ACTIONS_READY.md  GITHUB_ACTIVATION_STEPS.md  GITHUB_CLOUD_DEPLOYMENT.md  GITHUB_SECRETS_SETUP.md  HELIUS_ANALYSIS_BOT_README.md  HELIUS_BOT_ANALYSIS_REPORT.md  HELIUS_BOT_REANALYSIS_REPORT.md  HELIUS_BOT_SPEKSIT.md  HELIUS_BOT_SUMMARY.md  HYBRID_BOT_DEVELOPMENT_TEAM_README.md  HYBRID_BOT_GUIDE.md  HYBRID_BOT_TASK_RESULTS.md  IMPLEMENTATION_SUMMARY.md  (+2008 more)
.runtime/: analysis_agent.stdout  auto_bot.stdout  cycle_events.ndjson  filter_grid_results.csv  last_cycle.json  lightwatch_seen.json  run_1min_report_20250918_001550.txt  run_1min_report_20250918_001701.txt  run_1min_report_20250918_001827.txt  run_1min_report_20250918_002212.txt  run_1min_report_20250918_002413.txt  run_1min_report_20250918_152554.txt
configs/: birdeye_keys.json  whitelist.txt
crew/: __init__.py  agents.py  agents_invest.py  config.yml  crew.py  crew_invest.py  memory.py  memory_invest.py  models.yml  settings.py  (+3 more)
(+43 files in other folders)
